2008-05-30  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_info.c (imsettings_info_manager_get_fam_target)
	(imsettings_info_manager_fam_event_loop)
	(imsettings_info_manager_pending_init): Removed.
	(imsettings_info_manager_real_changed_xinputd): New function to take
	actions for monitoring xinput.d.
	(imsettings_info_manager_real_changed_dot_xinputrc): likewise for
	.xinputrc.
	(imsettings_info_manager_real_changed_xinputrc): likewise for xinputrc.
	(imsettings_info_manager_init_monitor): renamed from *_init_fam.
	We use GFileMonitor instead of using FAM directly.
	(imsettings_info_manager_tini_monitor): likewise.

	* imsettings/imsettings-object.c (imsettings_object_base_class_init):
	Initialize the hash here to share that in the class properly.
	(imsettings_object_base_class_finalize): Destroy the hash instead of
	the object finalizer. that caused an error in g_hash_table_destroy.

2008-05-29  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/Makefile.am (libimsettings_la_LDFLAGS):
	Add -version-info.

2008-05-28  Akira TAGOH  <tagoh@redhat.com>

	* tests/imsettings-info.c: New testcase for IMSettingsInfo.

	* imsettings/imsettings-object.c (_swap16, _swapu16, _swap32)
	(_swapu32, _swap64, _swapu64): Fix a typo.
	(imsettings_object_dump): Lookup the table first to check
	if the property is supposed to dump in the own way.
	(imsettings_object_dump): Fix an endian issue to update the amount
	of property.
	(imsettings_object_load_from_stream): Initialize GValue before puting
	a value.

	* imsettings/imsettings-utils.h (imsettings_swap16)
	(imsettings_swapu16, imsettings_swap32, imsettings_swapu32)
	(imsettings_swap64, imsettings_swapu64): Fix a typo.

	* imsettings/imsettings-info.c (imsettings_info_get_property):
	Add PROP_LANGUAGE, missing property.
	(imsettings_info_dump): Fix a crash if no language is given.
	(imsettings_info_dump): Add more self-dump for PROP_SHORT_DESC and
	PROP_IS_XIM.
	(imsettings_info_load): likewise.